# hud-browser

./: .env.example  .gitignore  Dockerfile.hud  README.md  env.py  hud.lock.yaml  local_test.py  pyproject.toml  remote_tasks.json  remote_test.py  tasks.json  tasks.py
backend/: server.py
backend/todo/backend/: main.py
scenarios/: __init__.py  game_2048.py  todo.py
tests/: conftest.py  test_env.py  test_game2048_api.py  test_todo_api.py
tools/: __init__.py  apps.py  browser.py
