[project]
name = "hud-browser-env"
version = "0.1.0"
description = "HUD browser environment: 2048 + todo apps served as cdp + rfb capabilities (HUD v6)"
# v6 SDK caps Python at <3.13; pin the upper bound so uv does not pick 3.13 and fail to resolve.
requires-python = ">=3.11,<3.13"
dependencies = [
 "hud-python[agents]>=0.6.5",
 "playwright",
 "httpx",
 "fastapi>=0.104.1",
 "uvicorn[standard]>=0.24.0",
 "python-multipart>=0.0.6",
 "pydantic>=2.6,<3",
 "pydantic-settings>=2.2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.hud]
image = "hud-browser:dev"

[tool.hatch.build]
# Flat top-level modules, not a package dir (the substrate is its own backend/ package).
only-packages = false
include = ["env.py", "tasks.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
